Rework, listen for UI messages.

--- a/TS2-Makeup-Lag-Fix.vcxproj.filters
+++ b/TS2-Makeup-Lag-Fix.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="UIEventWatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cGZMessage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
