--- a/TS2-Makeup-Lag-Fix.vcxproj
+++ b/TS2-Makeup-Lag-Fix.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cGZMessage.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Hooking.h" />
     <ClInclude Include="OverlaysTicker.h" />
